Fix spacing

--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ $responsive-width: clamp(400px, 50vw, 900px);
 
 body {
     display: grid;
-    grid-template-rows: 1fr 3fr .5fr auto;
+    grid-template-rows: 1fr 3fr .6fr auto;
     justify-items: center;
 	align-items: center;
     margin: 0;
@@ -21,6 +21,8 @@ body {
     justify-items: center;
     align-items: center;
     width: $responsive-width;
+	height: 100%;
+	padding-top: 2rem;
 
 	.radio-container {
 		display: flex;
@@ -32,7 +34,7 @@ body {
 }
 
 .large-letters {
-    font-size: 1.7rem;
+    font-size: 2rem;
     margin-bottom: 1.5rem;
 }
 
@@ -188,6 +190,7 @@ label {
   touch-action: manipulation;
   width: 100%;
   letter-spacing: .15rem;
+  margin-top: 1rem;
 }
 
 .button-9:disabled {
